--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
 .App {
-  text-align: center;
+ text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ height: 40vmin;
+ pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ .App-logo {
+  animation: App-logo-spin infinite 20s linear;
+ }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ background-color: #282c34;
+ min-height: 100vh;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ font-size: calc(10px + 2vmin);
+ color: white;
 }
 
 .App-link {
-  color: #61dafb;
+ color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ from {
+  transform: rotate(0deg);
+ }
+ to {
+  transform: rotate(360deg);
+ }
+}
+
+input,
+button {
+ padding: 10px;
+ margin: 20px;
+}
+button {
+ background: black;
+ color: white;
+ font-size: 20px;
+}
+
+body {
+ padding: 20px;
+}
+
+li {
+ list-style: none;
+ cursor: pointer;
+ padding: 5px;
+}
+
+table {
+ border: solid tomato 1px;
+ width: 100%;
+}
+
+tr {
+ border-bottom: solid 1px tomato;
 }
